--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
 
+            <Button
+                android:id="@+id/btnVibrate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Vibration starten"
+                android:layout_centerInParent="true" />
+
+
         </LinearLayout>
 
     </ScrollView>
