--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,20 @@
                 android:text="Vibration starten"
                 android:layout_centerInParent="true" />
 
+            <TextView
+                android:id="@+id/modeView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+            <Button
+                android:id="@+id/button_start_reaction_mode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reaktionsmodus starten" />
+
+
 
         </LinearLayout>
 
