Interpretationsmodus hinzugefügt, Reaktionszeit verbessert

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,13 @@
                 android:layout_height="wrap_content"
                 android:text="Reaktionsmodus starten" />
 
+            <Button
+                android:id="@+id/button_interpretation_mode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Interpretationsmodus starten"
+                android:onClick="startInterpretationMode"/>
+
 
 
         </LinearLayout>
