--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,7 +90,14 @@
                 android:id="@+id/btnVibrate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Training"
+                android:text="Training-A"
+                android:layout_centerInParent="true" />
+
+            <Button
+                android:id="@+id/btnVibrateB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Training-B"
                 android:layout_centerInParent="true" />
 
             <Button
